# zoho-sdk

./: .flake8  .gitignore  README.md  pyproject.toml
src/zoho/: __init__.py  exceptions.py  oauth2.py  requestor.py  search.py  settings.py  types.py  utils.py
src/zoho/records/: base.py  ref.py  tag.py
src/zoho/records/modules/: account.py  base.py  campaign.py  contact.py  deal.py  lead.py
